# workshop-leaderboard

./: .gitignore  CLAUDE.md  README.md  devbox.json  get_api_key.sh
.claude/: gsd-file-manifest.json  settings.local.json
.devcontainer/: Dockerfile  ccr_config.json  devcontainer.env  devcontainer.json  opencode_base_config.json
.opencode/: gsd-file-manifest.json  opencode.json
.planning/: PROJECT.md  config.json
backend/: CLAUDE.md  app.py  example_daily_activity_response.json5  openapi.json  pyproject.toml
backend/src/api/: SOLUTION_server.py  models.py  server.py
backend/src/client/: api_client.py  models.py
backend/src/leaderboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/services/: SOLUTION_model_usage_service.py  cost_efficiency_service.py  protocols.py  success_rate_service.py  team_daily_activity_service.py  team_service.py  time_series_service.py  token_aggregation_service.py
backend/src/utils/: SOLUTION_dependency_config.py  common.py  date_utils.py  dependency_config.py  endpoint_utils.py
backend/tests/: conftest.py  test_breakdown_edge_cases.py  test_cost_efficiency.py  test_cost_efficiency_endpoint_integration.py  test_cost_efficiency_service.py  test_date_utils.py  test_date_validation.py  test_protocol_compliance.py  test_success_rate_endpoint_integration.py  test_success_rate_service.py  test_team_service.py  test_time_series_service.py  test_token_aggregation_service.py  test_tokens_endpoint_integration.py  test_tokens_models_endpoint_integration.py  test_tokens_timeseries_endpoint_integration.py
(+61 files in other folders)
