[project]
name = "leaderboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Markus Höfling",email = "markus.hoefling@devboost.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9.0.0",
  "httpx>=0.28.1,<0.29.0",
  "ruff>=0.15.0,<0.16.0",
  "ty>=0.0.16,<0.1.0",
]

[tool.ruff]
exclude = ["debug_scripts"]

[tool.ty.src]
exclude = ["debug_scripts", "tests"]
